--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,11 +1,8 @@
 .nav-container {
   display: flex;
   justify-content: space-between;
-  border-left: solid white 3px;
-  border-right: solid white 3px;
-  border-bottom: solid white 3px;
+  border: 3px solid white;
   align-items: center;
-  max-width: 1000px;
   margin: 0 auto;
   height: 5vh;
 }
