--- a/src/style/signup.css
+++ b/src/style/signup.css
@@ -9,6 +9,10 @@
   margin: 0 auto;
 }
 
+.signup-component {
+  padding-bottom: 5vh;
+}
+
 .signup-logo-container {
   display: flex;
   font-family: 'Caveat', cursive;
