--- a/src/style/login.css
+++ b/src/style/login.css
@@ -7,7 +7,11 @@
   padding: 1rem;
   gap: 1rem;
   max-width: 500px;
-  margin: 0 auto;
+  margin: auto;
+}
+
+.login-component {
+  padding-bottom: 5vh;
 }
 
 .login-logo-container {
